# connectapi-python

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.ipynb  README.md  README.qmd  _tmp.py  justfile  pyproject.toml  test.ipynb  test.py
connectapi/: __init__.py  __main__.py  _utils.py  api.py  cli.py  client.py  config.py  content.py  user.py
connectapi/models/: content.py
docs/: _config.yml  _toc.yml  conf.py  index.ipynb
docs/reference/: api.rst  client.rst  content.rst  index.rst  overview.rst  user.rst
docs/tutorial/: client.ipynb  content.ipynb  installation.md  user.ipynb
docs/tutorials/: api.md  client.ipynb  content.ipynb  index.md  user.ipynb
tests/: __init__.py  test_api.py  test_client.py  test_content.py  test_exceptions.py  test_user.py
tests/content/shiny-for-r/: manifest.json
tests/content/shiny-for-r/streamlit/: app.py  manifest.json
