[tool.poetry]
name = "connectapi"
version = "0.1.1a0"
description = "A Python package for interacting with the Posit Connect Server API"
authors = ["SamEdwardes <sam.edwardes@rstudio.com>"]
readme = "README.md"
documentation = "https://connectapi-python.netlify.app"
repository = "https://github.com/SamEdwardes/connectapi-python"
keywords = ["rstudio", "connect", "posit", "api"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
httpx = "^0.23.0"
rich = "^12.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
jupyter = "^1.0.0"
jupyter-book = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
